--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   audioplayers: ^0.18.3
+  signalr_netcore:
 
 dev_dependencies:
   flutter_test:
