--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,3 +29,8 @@ subprojects {
 tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    flutterFFmpegPackage  = "full-gpl-lts"
+}
+
