--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   provider:
+  flutter_ffmpeg: ^0.4.2
+  video_player: 
 
 dev_dependencies:
   flutter_test:
