--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider:
   flutter_ffmpeg: ^0.4.2
   video_player: 
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
