--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_ffmpeg: ^0.4.2
   video_player: 
   path_provider: ^2.1.1
+  chewie: ^1.5.0
 
 dev_dependencies:
   flutter_test:
