--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^1.1.0
+  http: ^1.1.2
   provider:
   flutter_ffmpeg: ^0.4.2
-  video_player: 
   path_provider: ^2.1.1
-  chewie: ^1.5.0
+  video_viewer: ^1.2.7
 
 dev_dependencies:
   flutter_test:
