--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_ffmpeg: ^0.4.2
   path_provider: ^2.1.1
   video_player: ^2.4.4
-  better_player_hls: ^0.0.84
+  lecle_yoyo_player: ^0.0.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
