--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,10 +30,10 @@
             android:name="flutterEmbedding"
             android:value="2" />
         <receiver android:name="tv.mta.flutter_playout.audio.RemoteReceiver"
-        android:exported="false">   
+        android:exported="true">   
         </receiver>
         <receiver android:name="tv.mta.flutter_playout.video.RemoteReceiver"
-        android:exported="false">   
+        android:exported="true">   
         </receiver>  
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
