--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,13 +29,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-        <receiver android:name="tv.mta.flutter_playout.audio.RemoteReceiver"
-        android:exported="true">   
-        </receiver>
-        <receiver android:name="tv.mta.flutter_playout.video.RemoteReceiver"
-        android:exported="true">   
-        </receiver>  
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
-    
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 </manifest>
