--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   provider:
   flutter_ffmpeg: ^0.4.2
   path_provider: ^2.1.1
-  video_player: 
-    path: video_player
+  video_player: ^2.8.2
+    # path: video_player
 dev_dependencies:
   flutter_test:
     sdk: flutter
