--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   flutter_ffmpeg: ^0.4.2
   path_provider: ^2.1.1
   video_player: ^2.8.2
-    # path: video_player
+  video_player_media_kit: ^1.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
