--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,7 +76,9 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     
-    implementation "androidx.media3:media3-exoplayer:1.2.1"
-    implementation "androidx.media3:media3-ui:1.2.1"
+    implementation "androidx.media3:media3-exoplayer-hls:1.3.0"
     implementation 'androidx.multidex:multidex:2.0.1'
+    implementation 'androidx.media3:media3-common:1.3.0'
+    implementation 'androidx.media3:media3-exoplayer:1.3.0'
+    implementation 'androidx.media3:media3-ui:1.3.0'
 }
