--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   path_provider: ^2.1.1
   presentation_displays: ^1.0.0
   shared_preferences: ^2.2.2
+  pinch_zoom: ^2.0.0
+  widget_zoom: ^0.0.4
 
 dev_dependencies:
   flutter_test:
